# app/http/controllers/roadmap.go
@@ -154,10 +154,15 @@ func (r RoadmapController) GetThemes(ctx *gin.Context) {
 
 	var target []string
 
-	err = r.aiSrv.GetAnswer(user.ChatGptToken, user.ChatGptModel, []*services.DialogItem{{Text: prompt, IsUser: true}}, &target)
+	err = r.aiSrv.GetAnswer(user.ChatGptToken, user.ChatGptModel, []*models.DialogItem{{Text: prompt, IsUser: true}}, &target)
 	if err != nil {
 		if errors.Is(err, services.ErrAIRequestFailed) {
 			ctx.JSON(http.StatusConflict, dtos.ErrorResponse{Error: err.Error()})
+			return
+		}
+
+		if errors.Is(err, services.ErrParseResFailed) {
+			ctx.JSON(http.StatusConflict, dtos.ErrorResponse{Error: "Неверный формат ответа AI. Попробуйте еще раз."})
 			return
 		}
 
@@ -273,10 +278,15 @@ func (r RoadmapController) GetTheme(ctx *gin.Context) {
 
 	var target services.PromptThemeResponse
 
-	err = r.aiSrv.GetAnswer(user.ChatGptToken, user.ChatGptModel, []*services.DialogItem{{Text: prompt, IsUser: true}}, &target)
+	err = r.aiSrv.GetAnswer(user.ChatGptToken, user.ChatGptModel, []*models.DialogItem{{Text: prompt, IsUser: true}}, &target)
 	if err != nil {
 		if errors.Is(err, services.ErrAIRequestFailed) {
 			ctx.JSON(http.StatusConflict, dtos.ErrorResponse{Error: err.Error()})
+			return
+		}
+
+		if errors.Is(err, services.ErrParseResFailed) {
+			ctx.JSON(http.StatusConflict, dtos.ErrorResponse{Error: "Неверный формат ответа AI. Попробуйте еще раз."})
 			return
 		}
 
@@ -364,14 +374,19 @@ func (r RoadmapController) GetProblems(ctx *gin.Context) {
 		return
 	}
 
-	prompt := r.promptSrv.GetProblems(10, topic.Title, theme.Title, theme, topic.Themes)
+	prompt := r.promptSrv.GetProblems(3, topic.Title, theme.Title, theme, topic.Themes)
 
 	var target []*models.Problem
 
-	err = r.aiSrv.GetAnswer(user.ChatGptToken, user.ChatGptModel, []*services.DialogItem{{Text: prompt, IsUser: true}}, &target)
+	err = r.aiSrv.GetAnswer(user.ChatGptToken, user.ChatGptModel, []*models.DialogItem{{Text: prompt, IsUser: true}}, &target)
 	if err != nil {
 		if errors.Is(err, services.ErrAIRequestFailed) {
 			ctx.JSON(http.StatusConflict, dtos.ErrorResponse{Error: err.Error()})
+			return
+		}
+
+		if errors.Is(err, services.ErrParseResFailed) {
+			ctx.JSON(http.StatusConflict, dtos.ErrorResponse{Error: "Неверный формат ответа AI. Попробуйте еще раз."})
 			return
 		}
 
@@ -450,10 +465,15 @@ func (r RoadmapController) VerifyAnswerAndIncrementUserScore(ctx *gin.Context) {
 	prompt := r.promptSrv.VerifyAnswer(problem.Question, req.Answer, req.Language)
 	var target services.PromptProblemResponse
 
-	err = r.aiSrv.GetAnswer(user.ChatGptToken, user.ChatGptModel, []*services.DialogItem{{Text: prompt, IsUser: true}}, &target)
+	err = r.aiSrv.GetAnswer(user.ChatGptToken, user.ChatGptModel, []*models.DialogItem{{Text: prompt, IsUser: true}}, &target)
 	if err != nil {
 		if errors.Is(err, services.ErrAIRequestFailed) {
 			ctx.JSON(http.StatusConflict, dtos.ErrorResponse{Error: err.Error()})
+			return
+		}
+
+		if errors.Is(err, services.ErrParseResFailed) {
+			ctx.JSON(http.StatusConflict, dtos.ErrorResponse{Error: "Неверный формат ответа AI. Попробуйте еще раз."})
 			return
 		}
 
@@ -472,65 +492,7 @@ func (r RoadmapController) VerifyAnswerAndIncrementUserScore(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, target)
 }
 
-// VerifyAnswer and get verification status by AI
-// @Summary      Verify answer
-// @Description  VerifyAnswer and get verification status by AI
-// @Tags         roadmap
-// @Accept       json
-// @Produce      json
-// @Param Authorization header string true "Bearer <JWT token>"
-// @Param        request body dtos.VerifyAnswerRequest true "Answer details"
-// @Success      200 {object} services.PromptProblemResponse "Answer verification result"
-// @Failure      400 {object} dtos.ValidationErrorResponse "Invalid request body"
-// @Failure      401 {object} dtos.ErrorResponse "Unauthorized"
-// @Failure      409 {object} dtos.ErrorResponse "AI request error"
-// @Failure      500 {object} dtos.ErrorResponse "Internal server error"
-// @Router       /roadmap/resolve [post]
-func (r RoadmapController) VerifyAnswer(ctx *gin.Context) {
-	var req dtos.VerifyAnswerRequest
-
-	userId, err := httputils.GetUserId(ctx)
-	if err != nil {
-
-		ctx.JSON(http.StatusUnauthorized, dtos.UnauthorizedResponse())
-		return
-	}
-
-	user, err := r.userSrv.GetById(userId)
-	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, dtos.InternalServerErrorResponse())
-		return
-	}
-
-	if err := ctx.ShouldBindJSON(&req); err != nil {
-		var valErr validator.ValidationErrors
-		ok := errors.As(err, &valErr)
-
-		if ok {
-			ctx.JSON(http.StatusBadRequest, dtos.ValidationErrorResponse{Error: valid.ParseValidationErrors(err)})
-			return
-		}
-
-		ctx.JSON(http.StatusInternalServerError, dtos.InternalServerErrorResponse())
-		return
-	}
-
-	prompt := r.promptSrv.VerifyAnswer(req.Problem, req.Answer, req.Language)
-	var target services.PromptProblemResponse
-
-	err = r.aiSrv.GetAnswer(user.ChatGptToken, user.ChatGptModel, []*services.DialogItem{{Text: prompt, IsUser: true}}, &target)
-	if err != nil {
-		if errors.Is(err, services.ErrAIRequestFailed) {
-			ctx.JSON(http.StatusConflict, dtos.ErrorResponse{Error: err.Error()})
-			return
-		}
-
-		ctx.JSON(http.StatusInternalServerError, dtos.InternalServerErrorResponse())
-		return
-	}
-
-	ctx.JSON(http.StatusOK, target)
-}
+//
 
 func NewRoadmapController(
 	userSrv services.UserService,
