# app/http/dtos/err_res.go
@@ -12,6 +12,10 @@ func NotFoundResponse() *ErrorResponse {
 	return &ErrorResponse{Error: "Not found"}
 }
 
+func ForbiddenResponse() *ErrorResponse {
+	return &ErrorResponse{Error: "Forbidden"}
+}
+
 func InternalServerErrorResponse() *ErrorResponse {
 	return &ErrorResponse{Error: "Internal server error"}
 }
