# app/http/dtos/throw_message_req.go
@@ -1,0 +1,5 @@
+package dtos
+
+type ThrowMessageRequest struct {
+	Message string `json:"message" binding:"required"`
+}
